# datascience-template-CUDA

./: CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION-PROGRESS.md  NEXT-SESSION-TODO.md  QUICKSTART.md  README.md  addingClaudeCode.md  cleanup-script.sh  devcontainer.json  iterate-test-jetbrains-env.sh  iterate-test-vscode-env.sh  pyproject.toml  resolve-dependencies.py  setup-environment.sh  setup-project.sh  summary-package-installation-problem.md  test-gpu.py
